Closed Bug 103467 Opened 23 years ago Closed 23 years ago

Form does not save my client card number

Categories

(SeaMonkey :: Passwords & Permissions, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: hadean, Assigned: morse)

References

()

Details

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.4+) Gecko/20011005 BuildID: 2001100503 The form saves my password just fine, but does not save my client card number... Although very insecure to have both saved, I'd rather save my card number then my password (safer and easier). Reproducible: Always Steps to Reproduce: 1. Enter in your card # and password, tell Moz to save it 2. Return to site and only password is filled in. Actual Results: Only password is filled in. Expected Results: Client # and password should be filled (or at least, client # and not password, for security). Is there a way I can display this easier for all of you, since most or all of you won't have a Royal Bank account... I think it's obvious from my description what I mean, though...
This is password manager, not form manager. URL specified in this bug report is not directly accessible. So I've extracted the relevant portion of that site and produced a simplified test case. Namely: <html> <body> <form> Username: <input TYPE="TEXT" NAME="USERID" VALUE="4519"> Password: <input TYPE="PASSWORD" NAME="PASSWORD" VALUE=""> <input TYPE="submit"> </form> </body> </html> Problem is with the default value that the html has for the username field. The password manager code explicitly tests for a default value and does not prefill if there is one. For the life of me, I can't remember why I decided it was bad to prefill if there was a default value. So the fix is to simply remove that code that tests for a default value before prefilling.
Status: UNCONFIRMED → ASSIGNED
Component: Form Manager → Password Manager
Ever confirmed: true
Target Milestone: --- → mozilla0.9.6
cc'ing alecf and law for reviews
Comment on attachment 52453 [details] [diff] [review] prefill even if there is a default value wow.. this will definitely change the behavior of wallet..:) sr=alecf
Comment on attachment 52453 [details] [diff] [review] prefill even if there is a default value r=law (for the code) I'm nervous about this change, though. There must have been some reason why it didn't replace default values originally. I can also see cases where the default value is more likely the right one; but that isn't based on a fully understanding of how form pre-fill works.
Attachment #52453 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: