bug 103467, fields with default values do not get prefilled by password manager, r=law, sr=alecf